# sWebView

./: README.md
docker_compose/: docker-compose.yml
slurm/: Dockerfile
src/: .ycm_extra_conf.py  AccountInfo.cpp  AccountInfo.hpp  AccountsInfo.cpp  AccountsInfo.hpp  AccountsInfoWidget.cpp  AccountsInfoWidget.hpp  AdminWidget.cpp  AdminWidget.hpp  AssociationInfo.cpp  AssociationInfo.hpp  AuthWidget.cpp  AuthWidget.hpp  CMakeCache.txt  CMakeLists.txt  ClusterInfo.cpp  ClusterInfo.hpp  ClustersInfo.cpp  ClustersInfo.hpp  InfoWidget.cpp  InfoWidget.hpp  JobInfo.cpp  JobInfo.hpp  JobsInfo.cpp  JobsInfo.hpp  JobsInfoWidget.cpp  JobsInfoWidget.hpp  Makefile  NodeInfo.cpp  NodeInfo.hpp  NodesInfo.cpp  NodesInfo.hpp  Observable.cpp  Observable.hpp  PartitionInfo.cpp  PartitionInfo.hpp  PartitionsInfo.cpp  PartitionsInfo.hpp  ReservationInfo.cpp  ReservationInfo.hpp  (+20 more)
src/app/: auth.db  text.xml
src/example/: Observer.hpp  SlurmOverviewData.hpp  SlurmOverviewWidget.cpp  auth.cpp  web_ui.cpp
src/example/libslurm/: main.cpp
src/model/: Session.cpp  Session.h  User.cpp  User.h
src/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  jenkins_tests.run  slurm_db_test.cpp  users_info_test.cpp
wt/: Dockerfile
wt/sWebView/src/: CMakeCache.txt  InfoWidget.cpp  RootApplication.hpp  main.cpp
wt/sWebView/src/app/: auth.db
wt/sWebView/src/example/: Data.hpp  DialogUtil.hpp  SlurmOverviewWidget.hpp
wt/sWebView/src/example/libslurm/: CMakeLists.txt
wt/sWebView/src/model/: Session.cpp  User.h
